--- a/AmongUsCheeseCake/AmongUsCheeseCake/packages.config
+++ b/AmongUsCheeseCake/AmongUsCheeseCake/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fasm.NET" version="1.70.03" targetFramework="net461" />
   <package id="GameOverlay.Net" version="4.3.0" targetFramework="net461" />
   <package id="Memory.dll" version="1.2.19" targetFramework="net461" />
+  <package id="MemorySharp" version="1.2.0" targetFramework="net461" />
   <package id="SharpDX" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net461" />
