--- a/AmongUsCheeseCake/AmongUsCheeseCake/AmongUsCheeseCake.csproj
+++ b/AmongUsCheeseCake/AmongUsCheeseCake/AmongUsCheeseCake.csproj
@@ -13,6 +13,21 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -73,17 +88,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cheat\CachedPlayerControllInfo.cs" />
-    <Compile Include="Cheat\Functions.cs" />
+    <Compile Include="Cheat\EngineOffset.cs" />
     <Compile Include="Cheat\Radar.cs" />
     <Compile Include="Cheat\Utilis.cs" />
-    <Compile Include="Game\S_GameData.cs" />
-    <Compile Include="Game\S_InnerNetObject.cs" />
-    <Compile Include="Game\S_PlayerInfo.cs" />
-    <Compile Include="Game\S_PlayerControll.cs" />
-    <Compile Include="Game\S_Vector2.cs" />
+    <Compile Include="Game\GameData.cs" />
+    <Compile Include="Game\InnerNetObject.cs" />
+    <Compile Include="Game\PlayerInfo.cs" />
+    <Compile Include="Game\PlayerControll.cs" />
+    <Compile Include="Game\Vector2.cs" />
     <Compile Include="Game\DumpEnum.cs" />
     <Compile Include="Cheat\CheatBase.cs" />
-    <Compile Include="Game\XmlOffsetGenerator.cs" />
+    <Compile Include="ProcUtil\EnginePointer.cs" />
+    <Compile Include="ProcUtil\Enums.cs" />
+    <Compile Include="ProcUtil\Player.cs" />
+    <Compile Include="ProcUtil\ProcessUtil.cs" />
+    <Compile Include="ProcUtil\RGsHarp.cs" />
+    <Compile Include="ProcUtil\ScriptCommands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -94,5 +114,18 @@
   <ItemGroup>
     <Content Include="Fasm.NET.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1%28x86 및 x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
